--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+html, body {
+  background-color: #87B738;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+}
+p {
+  margin: 0;
+  width: fit-content;
+  white-space: nowrap;
+}
+
