--- a/src/app/count-down-view/event-form/event-form.component.html
+++ b/src/app/count-down-view/event-form/event-form.component.html
@@ -5,7 +5,8 @@
   </div>
   <div class="input-container">
     <label>Date</label>
-    <input matInput [matDatepicker]="pickedDate" [min]="minDate" placeholder="Event End Date" (click)="pickedDate.open()" (focus)="pickedDate.open()" [(ngModel)]="eventDate">
+    <input matInput [matDatepicker]="pickedDate" [min]="minDate" placeholder="Event End Date"
+           (click)="pickedDate.open()" (focus)="pickedDate.open()" [(ngModel)]="eventDate">
     <mat-datepicker #pickedDate (closed)="onSubmit()"></mat-datepicker>
   </div>
 </div>
