--- a/src/app/count-down-view/event-form/event-form.component.html
+++ b/src/app/count-down-view/event-form/event-form.component.html
@@ -1,7 +1,7 @@
 <div class="event-form">
   <div class="input-container">
     <label>Title</label>
-    <input type="text" placeholder="Event Name" [(ngModel)]="eventName" (mouseleave)="onSubmit()">
+    <input type="text" placeholder="Event Name" [(ngModel)]="eventName">
   </div>
   <div class="input-container">
     <label>Date</label>
